# example-aws-serverless

./: .env  .gitignore  README.md  package-lock.json  package.json  pyproject.toml
src/: requirements.txt
src/cognito_trigger/: cognito_trigger_handler.py  serverless.yml
src/customs/: dev.yml
src/resources/: serverless-cognito.yml  serverless-lamdalayers.yml
