[tool.poetry]
name = "example-aws-serverless"
version = "0.1.0"
description = ""
authors = ["takanori <takanorig@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
aws-xray-sdk = "2.6.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.3"
autopep8 = "^1.5.4"
pytest = "^5.2"
coverage = "^5.2.1"
boto3 = "1.14.44"
moto = "1.3.14"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
